feat(core): extend JsonSchema with Map, enum, Optional, description
Add description/enumValues/nullable/additionalProperties. fromType supports Map<String,X>, enum, Optional<X>, nested generics. @SchemaDescription on record components. Backward-compatible factories preserved.